src/snapshots/afrotd__parser__tests__interpreation_html_3.3.5_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.5.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem er wegen einer blutenden oder nässenden Wunde behandelt
            wurde (A.R. 3.3.5.I), versucht A22 vor dem Snap wieder das
            Spielfeld zu betreten.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                A22 muss für mindestens einen Down aus dem Spiel bleiben. Er
                darf in jedem Fall nur dann zurückkommen, wenn er dazu die
                Erlaubnis des medizinischen Personals seines Teams hat.
            </p>
        </details>
    </div>
</article>
