src/snapshots/afrotd__parser__tests__interpreation_html_3.3.9_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.9.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Während des Downs verliert A22 seinen Helm vollständig (nicht
            verbunden mit einem Foul durch die Defense) und A45 bleibt verletzt
            am Boden liegen. Der Ballträger wird im Spielfeld getackelt. Die
            Game Clock hält an bei 0:58 in der vierten Spielperiode.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Da die Verletzung und der Helmverlust bei Spielern des gleichen
                Teams ge- schehen, hat Team B die Wahl eines
                10-Sekunden-Abzuges von der Game Clock. Team A kann ein Timeout
                verbrauchen und damit den 10-Sekunden-Abzug verhindern. A22
                kann dann aufgrund des genommenen Timeouts im Spiel bleiben.
                A45 muss aufgrund der Verletzung für mindestens einen Down aus
                dem Spiel bleiben.
            </p>
        </details>
    </div>
</article>
