src/snapshots/afrotd__parser__tests__interpreation_html_3.4.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach dem Zwei-Minuten-Timeout in der vierten Spielperiode und bei
            laufender Game Clock hat Team B keine Timeouts mehr verfügbar. Bei
            dem Versuch, Zeit einzusparen, überquert B-77 die neutrale Zone und
            berührt einen Team A-Spieler.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul. Strafe – 5 Meter vom Succeeding Spot. Da sich
                das Foul nach dem Zwei-Minuten-Timeout ereignet, fällt dieses
                Foul unter die 10-Sekunden-Abzug-Regel (Regel 3.4.4).
            </p>
        </details>
    </div>
</article>
