src/snapshots/afrotd__parser__tests__interpreation_html_3.4.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Der Ballträger wirft einen unvollständigen Vorwärtspass von
            jenseits der neutralen Zone, um Zeit einzusparen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 5 Meter vom Spot of Foul und Downverlust. Die Game
                Clock startet mit der Ballfreigabe (Regel 7.3.2 Strafe).
                Beachte: Ereignet sich das Foul nach dem Zwei-Minuten-Timeout,
                fällt es unter die 10-Sekunden-Abzug-Regel (Regel 3.4.4).
            </p>
        </details>
    </div>
</article>
