src/snapshots/afrotd__parser__tests__interpreation_html_3.4.3_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.3.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Zu einem späten Zeitpunkt im Spiel liegt Team A mit vier Punkten
            zurück und befindet sich in der Nähe von der B-Endzone. Nach einem
            Laufspiel wird der Ballträger inbounds getackelt. Einige auf dem
            Ballträger liegende Team B-Spieler lassen sich offensichtlich und
            absichtlich viel Zeit, bevor sie den Ballträger aufstehen lassen
            oder führen andere Aktionen durch, wodurch Anstrengungen der
            Schiedsrichter zur Ballfreigabe verzögert werden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul gegen Team B, Spielverzögerung. Wenn der Ball
                spielbereit ist, zeigt der Referee an, dass die Play Clock bei
                25 Sekunden startet, und die Game Clock startet mit dem Snap.
            </p>
        </details>
    </div>
</article>
